--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,11 +53,15 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
+            # Convert repo name to lowercase for Docker compatibility
+            REPO_LOWER=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+            IMAGE="ghcr.io/$REPO_LOWER:latest"
+
             echo "Logging into GHCR..."
             echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
             echo "Pulling latest image..."
-            docker pull ghcr.io/${{ github.repository }}:latest
+            docker pull $IMAGE
 
             echo "Stopping old container..."
             docker stop heyes-frontend || true
@@ -68,7 +72,7 @@ jobs:
               --name heyes-frontend \
               --restart unless-stopped \
               -p 80:80 \
-              ghcr.io/${{ github.repository }}:latest
+              $IMAGE
 
             echo "Cleanup..."
             docker image prune -f
